# SoN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: CPM.cmake  clang_format.cmake  comp_flags.cmake
src/: Arena.hpp  Builder.hpp  CMakeLists.txt  DomTree.hpp  Function.cpp  Function.hpp  InstVisitor.hpp  Instrs.hpp  Module.hpp  Node.cpp  Node.hpp  Opcodes.def  Opcodes.hpp
src/Analyses/: ConstantFolding.hpp  DomTree.hpp  Liveness.hpp  Loop.hpp  RegAlloc.hpp
src/Optimizations/: ChecksElimination.hpp  ConstantFolding.hpp  Inlining.hpp  Peephole.hpp
tests/assets/: graphs.hpp
tests/unit/: CMakeLists.txt
tests/unit/ChecksElimination/: CMakeLists.txt  ChecksElimination.cpp
tests/unit/ConstantFolding/: CMakeLists.txt  ConstantFolding.cpp
tests/unit/DomTree/: CMakeLists.txt  DomTree.cpp
tests/unit/Function/: CMakeLists.txt  function.cpp
tests/unit/Inlining/: CMakeLists.txt  Inlining.cpp
tests/unit/Liveness/: CMakeLists.txt  Liveness.cpp
tests/unit/Loop/: CMakeLists.txt  Loop.cpp
tests/unit/Peephole/: CMakeLists.txt  Peephole.cpp
tests/unit/RegAlloc/: CMakeLists.txt  RegAlloc.cpp
tests/unit/Utils/: CMakeLists.txt  utils.cpp
tests/unit/function/: function.cpp
